@startuml
!theme plain
skinparam classAttributeIconSize 0
title Sistema de Control de Acceso - Núcleo del Dominio

' === SISTEMA DE PUERTAS Y ESTADOS (STATE PATTERN) ===
class Door {
  - id: String
  - closed: boolean
  - state: State
  + processRequest(request: RequestReader)
  + setState(state: State)
  + toJson(): JSONObject
}

abstract class State {
  + {abstract} lock()
  + {abstract} unlock()
  + {abstract} unlockShortly()
  + {abstract} setDoor(door: Door)
  + {abstract} getState(): String
  + {abstract} intClock()
}

class Locked {
  + lock()
  + unlock()
  + unlockShortly()
}

class Unlocked {
  + lock()
  + unlock()
  + unlockShortly()
}

class UnlockedShortly {
  - dateTime: LocalDateTime
  - clock: Clock
  + update(Observable, Object)
  + intClock()
}

class Propped {
  + lock()
  + unlock()
  + unlockShortly()
}

Door *--> "1" State : state
State <|-- Locked
State <|-- Unlocked
State <|-- UnlockedShortly
State <|-- Propped

' === SISTEMA DE ÁREAS (COMPOSITE PATTERN) ===
abstract class Area {
  + {abstract} getName(): String
  + {abstract} getDoorsGivingAccess(): ArrayList<Door>
  + {abstract} findAreaById(name: String): Area
  + {abstract} toJson(depth: int): JSONObject
}

class Space extends Area {
  - doorList: ArrayList<Door>
  - name: String
  + addDoor(id: String)
  + getDoorsGivingAccess(): ArrayList<Door>
}

class Partition extends Area {
  - areas: ArrayList<Area>
  - name: String
  + add(area: Area)
  + getDoorsGivingAccess(): ArrayList<Door>
}

Partition *--> "0..*" Area : areas
Space --> "*" Door : doorList

' === SISTEMA DE USUARIOS Y PERMISOS (RBAC) ===
class User {
  - name: String
  - credential: String
  - group: Group
  + canAccess(area: Area, action: String, now: LocalDateTime): boolean
}

class Group {
  - name: String
  - actions: ArrayList<String>
  - users: ArrayList<User>
  - areas: ArrayList<Area>
  - schedule: Schedule
  + canAccess(area: Area, action: String, now: LocalDateTime): boolean
}

class Schedule {
  - fromDate: LocalDateTime
  - toDate: LocalDateTime
  - fromHour: LocalTime
  - toHour: LocalTime
  + canAccess(now: LocalDateTime): int
}

User --> "1" Group : group
Group --> "1" Schedule : schedule
Group --> "*" Area : areas

' === SISTEMA DE TIEMPO (OBSERVER PATTERN) ===
class Clock extends Observable implements Runnable {
  - {static} instance: Clock
  - running: boolean
  + {static} getInstance(): Clock
  + run()
}

UnlockedShortly .up.> Clock : observes

' === DIRECTORIOS (SINGLETON + FACTORY) ===
class DirectoryDoors {
  - {static} allDoors: ArrayList<Door>
  + {static} findDoorById(id: String): Door
  + {static} getAllDoors(): ArrayList<Door>
}

class DirectoryUsers {
  - {static} users: ArrayList<User>
  + {static} findUserByCredential(credential: String): User
}

class DirectoryAreas {
  - {static} instance: DirectoryAreas
  - {static} allAreas: ArrayList<Area>
  + {static} getInstance(): DirectoryAreas
  + {static} findAreaById(name: String): Area
}

DirectoryDoors --> "*" Door : allDoors
DirectoryUsers --> "*" User : users
DirectoryAreas --> "*" Area : allAreas

@enduml